resolve #8827 Dropdown item labels are misaligned in RTL (#8832)

--- a/packages/survey-core/src/defaultV2-theme/blocks/sd-tagbox.scss
+++ b/packages/survey-core/src/defaultV2-theme/blocks/sd-tagbox.scss
@@ -119,7 +119,7 @@
   max-width: 100%;
   width: auto;
   height: 100%;
-  text-align: left;
+  text-align: start;
   cursor: text;
   pointer-events: none;
   color: $foreground-light;
