--- a/src/modern/blocks/sv-btn.scss
+++ b/src/modern/blocks/sv-btn.scss
@@ -12,7 +12,7 @@
     font-weight: bold;
     outline: none;
     padding: 0.5em 2.786em 0.6em;
-    text-align: left;
+    text-align: start;
 }
 .sv-btn--navigation {
     background-color: var(--main-color, $main-color);
